<resources>
    <string name="app_name">Foodie</string>
    <string name="good_food">GOOD FOOD</string>
    <string name="good_mood">GOOD MOOD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodieTxt">FOODIE</string>
    <string name="skip">Skip</string>
    <string name="forgotPassword">Forgot you password?</string>
    <string name="login">Login</string>
    <string name="haveAccount">Have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="plan_ur_meals">Plan your meals</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="add">+Add</string>
    <string name="information">Information</string>
    <string name="country">Country</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="protein">Protein</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="see_more"> ...See More</string>
    <string name="longTxt">Bring a large pot of water to a boil. Add kosher salt to the boiling water, then add the pasta. Cook according to the package instructions, about 9 minutes.\r\nIn a large skillet over medium-high heat, add the olive oil and heat until the oil starts to shimmer. Add the garlic and cook, stirring, until fragrant, 1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove from the heat and add the chopped basil.\r\nDrain the pasta and add it to the sauce. Garnish with Parmigiano-Reggiano flakes and more basil and serve warm.</string>
    <string name="watch_recipe">Watch Recipe</string>
    <string name="amount">360g</string>
    <string name="chicken">Chicken</string>
    <string name="dosenthaveAccount">Do not have an account?</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="signup">Sign Up</string>
    <string name="myFavourites">My Favourites</string>
    <string name="dailyInspiration">Daily Inspiration</string>
    <string name="category">Categories</string>
    <string name="ingredient">Ingredients</string>
    <string name="area">Countries</string>
    <string name="slidePagerMeal">Slide Pager Meal</string>
    <string name="search_meal">Search for a meal</string>
    <string name="meal">Yogurt with fruits</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="appetizers">Appetizers</string>
    <string name="lunch">Lunch</string>
    <string name="try_this">Try this recipe</string>
    <string name="egypt">Egypt</string>
    <string name="type" >Type</string>
    <string name="warning">WARNING!</string>
    <string name="guest">Guest cannot access this part!, login first.</string>
    <string name="backup">Backup now</string>
</resources>