<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".signup.view.SignupActivity">

    <View
        android:id="@+id/topSignup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/second_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodieTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/green"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="2"
        android:text="@string/foodieTxt"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSignup" />

    <EditText
        android:id="@+id/usernameEditTextSignUp"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodieTextView" />

    <EditText
        android:id="@+id/emailEditTextSignUp"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextSignUp" />

    <EditText
        android:id="@+id/passwordEditTextSignUp"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextSignUp" />

    <EditText
        android:id="@+id/confirmPasswordEditTextLogin"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextSignUp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="322dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/signup"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditTextLogin" />

    <TextView
        android:id="@+id/haveAnAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="15dp"
        android:text="@string/haveAccount"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/haveAnAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <View
        android:id="@+id/bottomSignUp"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:background="@drawable/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>