<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plan.view.PlanFragment">

    <View
        android:id="@+id/planTopView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/third_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_ur_meals"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/planTopView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saturdayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/saturdayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/saturdayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sundayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sundayRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/sundayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mondayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mondayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/mondayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tuesdayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tuesdayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tuesdayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wednesdayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wednesdayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/thursdayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thursdayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/thursdayRecyclerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fridayAddMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endVGuideline"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fridayRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="383dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endVGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="386dp" />


</androidx.constraintlayout.widget.ConstraintLayout>