<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/skip"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foodieTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodieTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/foodieTxt"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodieTextView" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="322dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="15dp"
        android:text="@string/haveAccount"
        android:textColor="@color/dark_gray"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>